# robotarm-interface

./: .gitignore  README.md
Documents/: WoR-inteface.odt
Documents/Diagrams/: Robotarm_Interface.asta  klasse_diagram_robot_arm.asta  protocol_state_diagram_robot_arm.asta  sequence_diagram_robot_arm.asta  state_diagram_robot_arm.asta  use_case_diagram_robot_arm.asta
Documents/Diagrams/png_diagrams/: Protocol_State_Diagram_robot_interface.png.bak
robotarm_hld/: CMakeLists.txt  package.xml
robotarm_hld/action/: PositionPreset.action  Servo.action  ServoPositions.action
robotarm_hld/include/robotarm_hld/: Position.hpp  PresetConfig.hpp  RobotarmHLD.hpp  RosInterface.hpp
robotarm_hld/src/: Position.cpp  RobotarmHLD.cpp  RosInterface.cpp  main.cpp
robotarm_lld/: .gitignore  CMakeLists.txt  package.xml
robotarm_lld/include/robotarm_lld/: RobotarmLLD.hpp  config.hpp
robotarm_lld/src/: RobotarmLLD.cpp
